--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,27 @@
       "request": "launch",
       "program": "${workspaceRoot}/index.js",
       "stopOnEntry": false,
-      "args": ["1a"],
+      "args": ["-t", "abc", "examples/numbers/primes1.txt"],
+      "cwd": "${workspaceRoot}",
+      "preLaunchTask": null,
+      "runtimeExecutable": null,
+      "runtimeArgs": [
+        "--nolazy"
+      ],
+      "env": {
+        "NODE_ENV": "development"
+      },
+      "console": "internalConsole",
+      "sourceMaps": false,
+      "outDir": null
+    },
+    {
+      "name": "Generate",
+      "type": "node",
+      "request": "launch",
+      "program": "${workspaceRoot}/lexjs/main.js",
+      "stopOnEntry": false,
+      "args": ["-o", "abc", "examples/numbers/numbers.js"],
       "cwd": "${workspaceRoot}",
       "preLaunchTask": null,
       "runtimeExecutable": null,
