--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,9 @@
       "name": "Launch",
       "type": "node",
       "request": "launch",
-      "program": "${workspaceRoot}/examples/numbers/numbers.js",
+      "program": "${workspaceRoot}/examples/javascript/javascript.js",
       "stopOnEntry": false,
-      "args": ["-t", "abc", "examples/numbers/test"],
+      "args": ["-t", "abc", "examples/javascript/test"],
       "cwd": "${workspaceRoot}",
       "preLaunchTask": null,
       "runtimeExecutable": null,
@@ -27,7 +27,7 @@
       "request": "launch",
       "program": "${workspaceRoot}/lexjs/main.js",
       "stopOnEntry": false,
-      "args": ["-o", "examples/numbers/table", "examples/numbers/regex.js"],
+      "args": ["-o", "examples/javascript/table", "examples/javascript/rules.js"],
       "cwd": "${workspaceRoot}",
       "preLaunchTask": null,
       "runtimeExecutable": null,
